--- a/111 (2).html
+++ b/111 (2).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="111.css">
+    <link rel="stylesheet" href="111 (2).css">
     <title>amazon</title>
 </head>
 <body class="body">
@@ -41,7 +41,7 @@
 	<div id="line55"></div>
 	
 
-	<div>
+	<div class="director">
 		<div class="block1">
 			<p id="web1">web design</p>
 			<div id="line2"></div>
@@ -92,27 +92,62 @@
 		</header>
 		</div>
 	</div>
+	<div id="clear">
 	<div id="id"></div>
-<div>	
-	<div id="id1">Client Testimonials</div>
+<div class="control">
+	<div class="container01">	
+	<p class="test">Client Testimonials</p>
+		<div class="container" >
 	
-	<div class="contener">
-	
-		<div class="client1"></div>
-		<div id=	"user"><p>4448888888888888888888888888888</p></div>
+			<div class="client1"></div>
+		
+			<div class="ttt"><div id="user1"><p>"Design studios created a beautiful website and were</p>
+			<p id="user2"> a pleasure to work with during the whole process...”</p>
+			<p class="people">Sarah Johnson</p>
+			<a class="blue" href="https://oz.by/">Web Design Media</a></div></div>
+			
+		</div>
+		
+		<div class="container2">
+			<div class="client2"></div>
+			<div class="ttt"><div id="user3"><p>“I only have good things to say about Design Studios</p> </p>
+			<p id="user4">- I highly recommend them for promotional work...”</p>
+			<p class="people">Kate Saunders</p>
+			<a class="blue" href="https://www.onliner.by/">Software Solutions</a></div></div>
+
+		</div>
+
+		<div class="container3">
+			<div class="client3"></div>
+			<div class="ttt"><div id="user5"><p>“Design Studios have increased traffic to my site by </p>
+			<p id="user6">over 200% in just a few months - great work guys!”</p>
+			<p class="people">Dave Cole</p>
+			<a class="blue" href="https://www.kufar.by/%D0%B1%D0%B5%D0%BB%D0%B0%D1%80%D1%83%D1%81%D1%8C/">Global Web Services</a></div></div>
+		
+		</div>
 	</div>
-		
-		
-	<div class="client2"></div>
-	<div class="client3"></div>
-		
-
-
-
-
-
+		<div  class="asd">
+			<p>Featured Project</p>
+			<p class="yoshi">Yoshi Online Marketing Campaign</p>
+				<div class="img"></div>
+			<p id="time" class="time">This project involved organizing an online marketing campaign to help </p>
+			<p  class="time">promote the Yoshi brand. The result of this campaign resulted in a 200% </p>
+			<p class="time">increase in Yoshi sales over a six months period of time.</p>
+			<a href="http://buffalo99.com.ua/" class="blue" id=" font" target="_blank">Click Here For More Details >></a>
+		</div>
 
 </div>
+
+	
+
+	
+	
+<div id="line99"></div>
+
+
+
+
+
 	
 </body>
 </html>
